--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
     <head>
         <title>swim</title>
         <script src="swim.js"></script>
+        <link type="text/css" rel="stylesheet" href="swim.css"/>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     </head>
     <body>
-        <p id="nojs">Please enable javascript</p>
+        <h1>swim</h1>
+        <div id="game"><p>Please enable javascript</p></div>
+        <p>Controls here or something idunno ↑↑↓↓←→←→</p>
+        <p>ⓒ #lastman 2013</p>
     </body>
 </html>
