player movement calculations, no graphics yet

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>swim</title>
         <script src="swim.js"></script>
+        <script src="player.js"></script>
         <link type="text/css" rel="stylesheet" href="swim.css"/>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     </head>
