--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>swim</title>
         <script src="swim.js"></script>
         <script src="player.js"></script>
+        <script src="map.js"></script>
+        <script src="perlin-noise-classical.js"></script>
         <link type="text/css" rel="stylesheet" href="swim.css"/>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     </head>
