make nojs warning pretty

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     </head>
     <body>
         <h1>swim</h1>
-        <div id="game"><p>Please enable javascript</p></div>
-        <p>Controls here or something idunno ↑↑↓↓←→←→</p>
+        <div id="game"><p class="nojs">Please enable javascript.</p></div>
         <p>ⓒ #lastman 2013</p>
     </body>
 </html>
