--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="player.js"></script>
         <script src="map.js"></script>
         <script src="perlin-noise-classical.js"></script>
+        <script src="scenery.js"></script>
         <link type="text/css" rel="stylesheet" href="swim.css"/>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     </head>
