--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <body>
         <h1>swim</h1>
         <div id="game"><p class="nojs">Please enable javascript.</p></div>
+        <p>←↑↓→ to swim, M to mute</p>
         <p>ⓒ #lastman 2013</p>
+        <audio id="bgm" preload="yes" controls="no">
+            <source src="sound/bgm.ogg" type="audio/ogg; codecs=vorbis"/>
+            <source src="sound/bgm.m4a" type="audio/aac"/>
+        </audio>
     </body>
 </html>
