add license and LET'S SHIP THIS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>swim</h1>
         <div id="game"><p class="nojs">Please enable javascript.</p></div>
         <p>←↑↓→ to swim, M to mute</p>
-        <p>ⓒ #lastman 2013</p>
+        <p class="license">ⓒ #lastman 2013</p><p class="license">Code and assets licensed under the Simplified BSD license and available <a href="https://github.com/codl/swim/">on GitHub</a>.</p>
         <audio id="bgm" preload="yes" controls="no">
             <source src="sound/bgm.ogg" type="audio/ogg; codecs=vorbis"/>
             <source src="sound/bgm.m4a" type="audio/aac"/>
