--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
             <source src="sound/bgm.ogg" type="audio/ogg; codecs=vorbis"/>
             <source src="sound/bgm.m4a" type="audio/aac"/>
         </audio>
+        <div id="fpscounter"></div>
     </body>
 </html>
