--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <body>
         <h1>swim</h1>
         <div id="game"><p class="nojs">Please enable javascript.</p></div>
+        <p>Check out the post-ludum version, which generates a bit faster and has a few bugfixes <a href="http://files.codl.fr/1304/swim_post">here</a></p>
         <p>←↑↓→ to swim, M to mute</p>
-        <p class="license">ⓒ #lastman 2013</p><p class="license">Code and assets licensed under the Simplified BSD license and available <a href="https://github.com/codl/swim/">on GitHub</a>.</p>
+        <p class="license">ⓒ #lastman 2013</p><p class="license">Code and assets licensed under the Simplified BSD license and available <a href="https://github.com/codl/swim/tree/ludumrelease">on GitHub</a>.</p>
         <audio id="bgm" preload="yes" controls="no">
             <source src="sound/bgm.ogg" type="audio/ogg; codecs=vorbis"/>
             <source src="sound/bgm.m4a" type="audio/aac"/>
