--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>swim</title>
         <script src="swim.js"></script>
         <script src="player.js"></script>
+        <script src="map_constants.js"></script>
         <script src="map.js"></script>
         <script src="perlin-noise-classical.js"></script>
         <script src="scenery.js"></script>
